Cambié la descripción de la sección acerca de mi

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            He dedicado mis energias a ayudar a las personas a formar un hábito para tomar agua,
+            y cambiando el paradigma de que el agua pura viene en botella, eliminando el plastico y los deshechos.
         </p>
 
 
